--- a/css/scss/index.css
+++ b/css/scss/index.css
@@ -1,31 +1,36 @@
-/* line 1, H:/job/projects-active/tennis/scss/index.scss */
+/* line 4, C:/job/projects-active/tennis/scss/index.scss */
 span, li, div, input {
   font-family: 'Open Sans', sans-serif;
 }
 
-/* line 5, H:/job/projects-active/tennis/scss/index.scss */
-p {
+/* line 8, C:/job/projects-active/tennis/scss/index.scss */
+p, button {
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
-/* line 9, H:/job/projects-active/tennis/scss/index.scss */
+/* line 12, C:/job/projects-active/tennis/scss/index.scss */
+a {
+  text-decoration: none;
+}
+
+/* line 16, C:/job/projects-active/tennis/scss/index.scss */
 #map {
   height: 600px;
   position: relative;
 }
 
-/* line 14, H:/job/projects-active/tennis/scss/index.scss */
+/* line 21, C:/job/projects-active/tennis/scss/index.scss */
 .m-map {
   position: absolute;
   top: 200px;
   left: 100px;
   right: 100px;
   z-index: 999;
-  max-width: 1200px;
+  max-width: 980px;
   margin: auto;
 }
 
-/* line 25, H:/job/projects-active/tennis/scss/index.scss */
+/* line 32, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order {
   background: #f1c40f;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.44);
@@ -34,7 +39,7 @@ p {
   float: left;
   width: 300px;
 }
-/* line 34, H:/job/projects-active/tennis/scss/index.scss */
+/* line 41, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order input {
   display: block;
   width: 100%;
@@ -46,27 +51,73 @@ p {
   border: 1px #b08d00 solid;
   box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.28);
 }
-/* line 47, H:/job/projects-active/tennis/scss/index.scss */
+/* line 54, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order p {
   font-size: 25px;
 }
-/* line 51, H:/job/projects-active/tennis/scss/index.scss */
+/* line 58, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order span {
   display: block;
   font-size: 14px;
 }
-/* line 56, H:/job/projects-active/tennis/scss/index.scss */
+/* line 63, C:/job/projects-active/tennis/scss/index.scss */
+.m-map-order fieldset {
+  padding: 15px 0;
+  border: 0;
+}
+/* line 68, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order .m-map-order-date {
   margin-right: 90px;
 }
-/* line 60, H:/job/projects-active/tennis/scss/index.scss */
+/* line 72, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order .m-map-order--time {
   float: right;
   width: 80px;
 }
+/* line 77, C:/job/projects-active/tennis/scss/index.scss */
+.m-map-order .m-map-order--submit {
+  display: block;
+  width: 100%;
+  border: none;
+  background: #2C3E50;
+  color: #f1c40f;
+  height: 45px;
+  border-radius: 4px;
+  font-size: 20px;
+}
 
-/* line 66, H:/job/projects-active/tennis/scss/index.scss */
+/* line 89, C:/job/projects-active/tennis/scss/index.scss */
+.m-map-order-sub-actions {
+  margin-top: 15px;
+}
+/* line 92, C:/job/projects-active/tennis/scss/index.scss */
+.m-map-order-sub-actions a {
+  display: block;
+  text-align: right;
+  margin-top: 5px;
+  font-size: 13px;
+  opacity: 0.7;
+}
+
+/* line 101, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-label {
-  margin: 100px 0 0 400px;
+  margin: 40px 0 0 400px;
   background: white;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.44);
+  padding: 40px;
+}
+/* line 107, C:/job/projects-active/tennis/scss/index.scss */
+.m-map-label p {
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+/* line 112, C:/job/projects-active/tennis/scss/index.scss */
+.m-map-label li {
+  margin-top: 10px;
+}
+/* line 116, C:/job/projects-active/tennis/scss/index.scss */
+.m-map-label .fa-circle-thin {
+  font-size: 0.8em;
+  padding-right: 10px;
+  vertical-align: middle;
 }
