--- a/css/scss/index.css
+++ b/css/scss/index.css
@@ -1,49 +1,53 @@
-/* line 5, H:/job/projects-active/tennis/scss/index.scss */
+/* line 1, C:/job/projects-active/tennis/scss/_mixins.scss */
+.m-map, .m-landing-callouts, .m-footer {
+  max-width: 980px;
+  margin: auto;
+}
+
+/* line 10, C:/job/projects-active/tennis/scss/index.scss */
 span, li, div, input {
   font-family: 'Open Sans', sans-serif;
 }
 
-/* line 9, H:/job/projects-active/tennis/scss/index.scss */
-p, button {
+/* line 14, C:/job/projects-active/tennis/scss/index.scss */
+h1, h2, h3, h4, button {
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
-/* line 13, H:/job/projects-active/tennis/scss/index.scss */
+/* line 18, C:/job/projects-active/tennis/scss/index.scss */
 a {
   text-decoration: none;
 }
 
-/* line 17, H:/job/projects-active/tennis/scss/index.scss */
+/* line 22, C:/job/projects-active/tennis/scss/index.scss */
 #map {
   height: 600px;
   margin-top: -40px;
   position: relative;
 }
 
-/* line 23, H:/job/projects-active/tennis/scss/index.scss */
+/* line 28, C:/job/projects-active/tennis/scss/index.scss */
 header {
   position: relative;
   z-index: 999;
   height: 40px;
 }
 
-/* line 29, H:/job/projects-active/tennis/scss/index.scss */
+/* line 34, C:/job/projects-active/tennis/scss/index.scss */
 body {
-  background: red;
+  background: white;
 }
 
-/* line 33, H:/job/projects-active/tennis/scss/index.scss */
+/* line 38, C:/job/projects-active/tennis/scss/index.scss */
 .m-map {
   position: absolute;
   top: 200px;
   left: 100px;
   right: 100px;
   z-index: 999;
-  max-width: 980px;
-  margin: auto;
 }
 
-/* line 44, H:/job/projects-active/tennis/scss/index.scss */
+/* line 48, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order {
   background: #f1c40f;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.44);
@@ -52,7 +56,7 @@ body {
   float: left;
   width: 300px;
 }
-/* line 53, H:/job/projects-active/tennis/scss/index.scss */
+/* line 57, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order input {
   display: block;
   width: 100%;
@@ -64,30 +68,30 @@ body {
   border: 1px #b08d00 solid;
   box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.28);
 }
-/* line 66, H:/job/projects-active/tennis/scss/index.scss */
-.m-map-order p {
+/* line 70, C:/job/projects-active/tennis/scss/index.scss */
+.m-map-order h3 {
   font-size: 25px;
 }
-/* line 70, H:/job/projects-active/tennis/scss/index.scss */
+/* line 74, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order span {
   display: block;
   font-size: 14px;
 }
-/* line 75, H:/job/projects-active/tennis/scss/index.scss */
+/* line 79, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order fieldset {
   padding: 15px 0;
   border: 0;
 }
-/* line 80, H:/job/projects-active/tennis/scss/index.scss */
+/* line 84, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order .m-map-order-date {
   margin-right: 90px;
 }
-/* line 84, H:/job/projects-active/tennis/scss/index.scss */
+/* line 88, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order .m-map-order--time {
   float: right;
   width: 80px;
 }
-/* line 89, H:/job/projects-active/tennis/scss/index.scss */
+/* line 93, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order .m-map-order--submit {
   display: block;
   width: 100%;
@@ -99,11 +103,11 @@ body {
   font-size: 20px;
 }
 
-/* line 101, H:/job/projects-active/tennis/scss/index.scss */
+/* line 105, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order-sub-actions {
   margin-top: 15px;
 }
-/* line 104, H:/job/projects-active/tennis/scss/index.scss */
+/* line 108, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-order-sub-actions a {
   display: block;
   text-align: right;
@@ -112,25 +116,122 @@ body {
   opacity: 0.7;
 }
 
-/* line 113, H:/job/projects-active/tennis/scss/index.scss */
+/* line 117, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-label {
   margin: 40px 0 0 400px;
   background: white;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.44);
   padding: 40px;
 }
-/* line 119, H:/job/projects-active/tennis/scss/index.scss */
-.m-map-label p {
+/* line 123, C:/job/projects-active/tennis/scss/index.scss */
+.m-map-label h1 {
   font-size: 50px;
   margin-bottom: 20px;
 }
-/* line 124, H:/job/projects-active/tennis/scss/index.scss */
+/* line 128, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-label li {
   margin-top: 10px;
 }
-/* line 128, H:/job/projects-active/tennis/scss/index.scss */
+/* line 132, C:/job/projects-active/tennis/scss/index.scss */
 .m-map-label .fa-circle-thin {
   font-size: 0.8em;
   padding-right: 10px;
   vertical-align: middle;
+}
+
+/* line 139, C:/job/projects-active/tennis/scss/index.scss */
+.m-landing-callouts {
+  overflow: hidden;
+  *zoom: 1;
+  margin: 70px auto;
+}
+
+/* line 146, C:/job/projects-active/tennis/scss/index.scss */
+.m-landing-callout {
+  float: left;
+  width: 50%;
+  margin: 30px 0;
+}
+/* line 151, C:/job/projects-active/tennis/scss/index.scss */
+.m-landing-callout > .fa {
+  border: 1px solid #2c3e50;
+  border-radius: 1000px;
+  height: 60px;
+  width: 60px;
+  text-align: center;
+  line-height: 60px;
+  color: #2C3E50;
+  float: left;
+  font-size: 30px;
+}
+
+/* line 160, C:/job/projects-active/tennis/scss/index.scss */
+.m-landing-callout-data {
+  margin-left: 80px;
+}
+/* line 163, C:/job/projects-active/tennis/scss/index.scss */
+.m-landing-callout-data h3 {
+  color: #393939;
+  font-family: 'Open Sans';
+  font-size: 30px;
+  font-weight: 100;
+}
+/* line 170, C:/job/projects-active/tennis/scss/index.scss */
+.m-landing-callout-data h4 {
+  color: #f1c40f;
+  margin: 10px 0;
+  font-family: 'Open Sans';
+}
+/* line 176, C:/job/projects-active/tennis/scss/index.scss */
+.m-landing-callout-data p {
+  margin: 20px 0;
+  font-weight: 100;
+  line-height: 1.5em;
+}
+
+/* line 183, C:/job/projects-active/tennis/scss/index.scss */
+footer {
+  background: #2c3e50;
+  color: #9ba6b0;
+  border-bottom: 3px solid #f1c40f;
+}
+/* line 188, C:/job/projects-active/tennis/scss/index.scss */
+footer a {
+  color: #9ba6b0;
+}
+
+/* line 193, C:/job/projects-active/tennis/scss/index.scss */
+.m-footer {
+  text-align: center;
+  font-size: 13px;
+  padding: 40px 0;
+}
+/* line 200, C:/job/projects-active/tennis/scss/index.scss */
+.m-footer .m-footer--copyright {
+  padding-top: 20px;
+}
+
+/* line 206, C:/job/projects-active/tennis/scss/index.scss */
+.m-footer-social li {
+  display: inline-block;
+}
+/* line 210, C:/job/projects-active/tennis/scss/index.scss */
+.m-footer-social .fa {
+  border: 1px solid #9ba6b0;
+  border-radius: 1000px;
+  height: 30px;
+  width: 30px;
+  text-align: center;
+  line-height: 30px;
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+  margin: 0 2px;
+}
+/* line 216, C:/job/projects-active/tennis/scss/index.scss */
+.m-footer-social .fa:hover {
+  color: #2c3e50;
+  border: 1px solid #2c3e50;
+  background: #9ba6b0;
 }
