--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,4 +1,9 @@
+@import "compass";
+@import "mixins";
+
 $color-yellow: #f1c40f;
+$color-footer-text: #9BA6B0;
+$color-footer-background: #2C3E50;
 $order-button-gap: 15px;
 $header-height: 40px;
 
@@ -6,7 +11,7 @@ span, li, div, input {
   font-family: 'Open Sans', sans-serif;
 }
 
-p, button {
+h1, h2, h3, h4, button {
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
@@ -27,18 +32,17 @@ header {
 }
 
 body {
-  background: red;
+  background: white;
 }
 
 .m-map {
+  @extend %section;
+
   position: absolute;
   top: 200px;
   left: 100px;
   right: 100px;
   z-index: 999;
-
-  max-width: 980px;
-  margin: auto;
 }
 
 .m-map-order {
@@ -63,7 +67,7 @@ body {
     box-shadow: inset 0 1px 1px 0 rgba(0, 0, 0, 0.28);
   }
 
-  p {
+  h3 {
     font-size: 25px;
   }
 
@@ -116,7 +120,7 @@ body {
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.44);
   padding: 40px;
 
-  p {
+  h1 {
     font-size: 50px;
     margin-bottom: 20px;
   }
@@ -129,5 +133,90 @@ body {
     font-size: 0.8em;
     padding-right: 10px;
     vertical-align: middle;
+  }
+}
+
+.m-landing-callouts {
+  @extend %section;
+  @include clearfix;
+
+  margin: 70px auto;
+}
+
+.m-landing-callout {
+  float: left;
+  width: 50%;
+  margin: 30px 0;
+
+  > .fa {
+    @include circle(60px, #2C3E50);
+    color: #2C3E50;
+
+    float: left;
+    font-size: 30px;
+  }
+}
+
+.m-landing-callout-data {
+  margin-left: 80px;
+
+  h3 {
+    color: #393939;
+    font-family: 'Open Sans';
+    font-size: 30px;
+    font-weight: 100;
+  }
+
+  h4 {
+    color: $color-yellow;
+    margin: 10px 0;
+    font-family: 'Open Sans';
+  }
+
+  p {
+    margin: 20px 0;
+    font-weight: 100;
+    line-height: 1.5em;
+  }
+}
+
+footer {
+  background: $color-footer-background;
+  color: $color-footer-text;
+  border-bottom: 3px solid $color-yellow;
+
+  a {
+    color: $color-footer-text;
+  }
+}
+
+.m-footer {
+  @extend %section;
+
+  text-align: center;
+  font-size: 13px;
+  padding: 40px 0;
+
+  .m-footer--copyright {
+    padding-top: 20px;
+  }
+}
+
+.m-footer-social {
+  li {
+    display: inline-block;
+  }
+
+  .fa {
+    @include circle(30px, $color-footer-text);
+    @include transition(all 0.2s ease-out);
+
+    margin: 0 2px;
+
+    &:hover {
+      color: $color-footer-background;
+      border: 1px solid $color-footer-background;
+      background: $color-footer-text;
+    }
   }
 }
