--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,8 @@
+@import "mixins/all";
+@import "modules/common";
+
 $color-yellow: #f1c40f;
 $order-button-gap: 15px;
-$header-height: 40px;
 
 span, li, div, input {
   font-family: 'Open Sans', sans-serif;
@@ -18,12 +20,6 @@ a {
   height: 600px;
   margin-top: -$header-height;
   position: relative;
-}
-
-header {
-  position: relative;
-  z-index: 999;
-  height: $header-height;
 }
 
 body {
