--- a/scss/mixins/_circle.scss
+++ b/scss/mixins/_circle.scss
@@ -1,10 +1,10 @@
-@mixin circle($dimension, $color) {
+@mixin circle($dimension, $color, $border-size: 1px) {
   display: inline-block;
   width: $dimension;
   height: $dimension;
-  line-height: $dimension;
+  line-height: $dimension - $border-size*2;
   color: $color;
-  border: 1px solid $color;
+  border: $border-size solid $color;
   border-radius: 50%;
   text-align: center;
 }
