--- a/scss/list.scss
+++ b/scss/list.scss
@@ -6,6 +6,12 @@ html, body {
   height: 100%;
 }
 
+%item-rating {
+  &.is-best {
+    border-color: #3c3;
+  }
+}
+
 #map {
   position: fixed;
   top: 0;
@@ -16,12 +22,17 @@ html, body {
 
 .m-left {
   position: relative;
-  width: 25%;
+  width: 50%;
   margin: 15px 0 50px 50px;
   min-height: 600px;
 
   border: 3px solid $color-yellow;
   background: white;
+}
+
+.m-list {
+  width: 50%;
+  float: left;
 }
 
 .m-list-filter {
@@ -88,13 +99,10 @@ html, body {
 
   .m-list-item-right--rating {
     @include circle(35px, $color-grey, 2px);
+    @extend %item-rating;
 
     font-size: 15px;
     cursor: default;
-
-    &.is-best {
-      border-color: #3c3;
-    }
   }
 }
 
@@ -115,5 +123,156 @@ html, body {
 
   .m-list-item-address--station {
     display: block;
+  }
+}
+
+.m-item {
+  width: 50%;
+  margin-left: 50%;
+  border-left: 1px solid $color-grey-border;
+  padding: 20px;
+}
+
+.m-item-gallery {
+  @include clearfix;
+
+  margin: 0 0 32px;
+
+  .m-item-gallery--item {
+    overflow: hidden;
+    width: 155px;
+    height: 155px;
+    margin: 0 1px;
+    float: left;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
+.m-item-details {
+  position: relative;
+
+  .m-item-details--title {
+    width: 70%;
+    font-size: 30px;
+    line-height: 35px;
+    padding: 0 0 17px;
+    cursor: default;
+    margin: -7px 0 0;
+  }
+
+  .m-item-details--row {
+    font-size: 14px;
+    line-height: 25px;
+  }
+
+  .m-item-details--type {
+    display: inline-block;
+    line-height: 25px;
+  }
+
+  .m-item-details--price {
+    display: inline-block;
+    line-height: 25px;
+    margin-left: 16px;
+  }
+
+  .m-item-details--description {
+    padding: 14px 50px 16px 0;
+    font-size: 15px;
+    line-height: 20px;
+    cursor: default;
+  }
+
+  .m-item-details--address-and-hours {
+    padding: 16px 0 24px;
+  }
+
+  .m-item-details-address {
+    span {
+      font-size: 15px;
+      line-height: 25px;
+      cursor: default;
+    }
+  }
+
+  .m-item-details-right--rating {
+    @include circle(76px, $color-grey, 4px);
+    @extend %item-rating;
+
+    position: absolute;
+    top: 7px;
+    right: 0;
+
+    font-size: 30px;
+  }
+}
+
+.m-item--detailed {
+  dl {
+    font-size: 15px;
+    line-height: 20px;
+    padding: 15px 15px 14px;
+    border-bottom: 1px solid #dcdcdc;
+  }
+
+  dl {
+    display: inline-block;
+    vertical-align: top;
+    width: 30%;
+  }
+
+  dd {
+    display: inline-block;
+    vertical-align: top;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+}
+
+.m-item-reviews-list {
+  background: #f6f6f6;
+}
+
+.m-item-review {
+  border-top: 1px solid $color-grey-border;
+  margin: 0 20px;
+  padding: 20px 0 0;
+
+  .m-item-review--text {
+    font-size: 15px;
+    line-height: 20px;
+  }
+}
+
+.m-item-review-info {
+  line-height: 28px;
+  padding: 16px 0 20px;
+
+  .m-item-review-info--avatar {
+    @include border-radius(15px);
+
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    overflow: hidden;
+    background-clip: padding-box;
+
+    img {
+      width: 30px;
+      height: 30px;
+    }
+  }
+
+  .m-item-review-info--user {
+    display: inline-block;
+    margin: 0 10px;
+  }
+
+  .m-item-review-info--date {
+    display: inline-block;
+    margin: 0 10px;
   }
 }
