--- a/scss/mixins/_vars.scss
+++ b/scss/mixins/_vars.scss
@@ -3,3 +3,5 @@ $color-grey: #2c3e50;
 $color-grey-light: #808080;
 $color-yellow: #f1c40f;
 $color-grey-border: #D9D9D9;
+$color-green: #3c3;
+$color-red: red;
