--- a/css/scss/list.css
+++ b/css/scss/list.css
@@ -206,33 +206,55 @@ html, body {
   width: 50%;
   margin-left: 50%;
   border-left: 1px solid #d9d9d9;
-  padding: 20px;
+  padding: 12px 20px 20px 20px;
 }
 
 /* line 136, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-gallery {
+  position: relative;
+  margin: 0 -20px 32px -20px;
+  height: 155px;
+  overflow: hidden;
+}
+/* line 144, H:/job/projects-active/tennis/scss/list.scss */
+.m-item-gallery ul {
   overflow: hidden;
   *zoom: 1;
-  margin: 0 0 32px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 9999px;
+  margin-left: -40px;
 }
-/* line 141, H:/job/projects-active/tennis/scss/list.scss */
+/* line 154, H:/job/projects-active/tennis/scss/list.scss */
+.m-item-gallery li {
+  float: left;
+  margin: 0 1px;
+}
+/* line 158, H:/job/projects-active/tennis/scss/list.scss */
+.m-item-gallery li:first-child {
+  margin: 0;
+}
+/* line 162, H:/job/projects-active/tennis/scss/list.scss */
+.m-item-gallery li:last-child {
+  margin: 0;
+}
+/* line 167, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-gallery .m-item-gallery--item {
   overflow: hidden;
   width: 155px;
   height: 155px;
-  margin: 0 1px;
-  float: left;
 }
-/* line 148, H:/job/projects-active/tennis/scss/list.scss */
+/* line 172, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-gallery .m-item-gallery--item img {
   width: 100%;
 }
 
-/* line 154, H:/job/projects-active/tennis/scss/list.scss */
+/* line 178, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details {
   position: relative;
 }
-/* line 157, H:/job/projects-active/tennis/scss/list.scss */
+/* line 181, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details .m-item-details--title {
   width: 70%;
   font-size: 30px;
@@ -241,34 +263,34 @@ html, body {
   cursor: default;
   margin: -7px 0 0;
 }
-/* line 166, H:/job/projects-active/tennis/scss/list.scss */
+/* line 190, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details .m-item-details--row {
   font-size: 14px;
   line-height: 25px;
 }
-/* line 171, H:/job/projects-active/tennis/scss/list.scss */
+/* line 195, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details .m-item-details--type {
   display: inline-block;
   line-height: 25px;
 }
-/* line 176, H:/job/projects-active/tennis/scss/list.scss */
+/* line 200, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details .m-item-details--price {
   display: inline-block;
   line-height: 25px;
   margin-left: 16px;
 }
-/* line 182, H:/job/projects-active/tennis/scss/list.scss */
+/* line 206, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details .m-item-details--description {
   padding: 14px 50px 16px 0;
   font-size: 15px;
   line-height: 20px;
   cursor: default;
 }
-/* line 189, H:/job/projects-active/tennis/scss/list.scss */
+/* line 213, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details .m-item-details--address-and-hours {
   padding: 16px 0 24px;
 }
-/* line 193, H:/job/projects-active/tennis/scss/list.scss */
+/* line 217, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details .m-item-details-right--rating {
   display: inline-block;
   width: 76px;
@@ -284,80 +306,80 @@ html, body {
   font-size: 30px;
 }
 
-/* line 205, H:/job/projects-active/tennis/scss/list.scss */
+/* line 229, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details--tags {
   padding-top: 16px;
 }
-/* line 209, H:/job/projects-active/tennis/scss/list.scss */
+/* line 233, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details--tags li {
   display: inline-block;
 }
-/* line 214, H:/job/projects-active/tennis/scss/list.scss */
+/* line 238, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details--tags .fa {
   padding-right: 4px;
   margin-left: -4px;
 }
-/* line 219, H:/job/projects-active/tennis/scss/list.scss */
+/* line 243, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details--tags .fa-check {
   color: #33cc33;
 }
-/* line 223, H:/job/projects-active/tennis/scss/list.scss */
+/* line 247, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details--tags .fa-times {
   color: red;
   opacity: 0.4;
 }
 
-/* line 230, H:/job/projects-active/tennis/scss/list.scss */
+/* line 254, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details-address span {
   font-size: 15px;
   line-height: 25px;
   cursor: default;
 }
-/* line 236, H:/job/projects-active/tennis/scss/list.scss */
+/* line 260, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details-address .m-item-details-address--street {
   display: block;
 }
-/* line 240, H:/job/projects-active/tennis/scss/list.scss */
+/* line 264, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details-address .m-item-details-address--phone {
   display: block;
 }
-/* line 244, H:/job/projects-active/tennis/scss/list.scss */
+/* line 268, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details-address .m-item-details-address--site {
   display: block;
 }
-/* line 248, H:/job/projects-active/tennis/scss/list.scss */
+/* line 272, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details-address .m-item-details-address--station {
   display: block;
 }
 
-/* line 253, H:/job/projects-active/tennis/scss/list.scss */
+/* line 277, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-details-hours {
   display: none;
 }
 
-/* line 257, H:/job/projects-active/tennis/scss/list.scss */
+/* line 281, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-detailed {
   padding-bottom: 24px;
   display: none;
 }
-/* line 261, H:/job/projects-active/tennis/scss/list.scss */
+/* line 285, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-detailed dl {
   font-size: 15px;
   line-height: 20px;
   padding: 15px 15px 14px;
   border-bottom: 1px solid #dcdcdc;
 }
-/* line 267, H:/job/projects-active/tennis/scss/list.scss */
+/* line 291, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-detailed dl:last-child {
   border-bottom: none;
 }
-/* line 272, H:/job/projects-active/tennis/scss/list.scss */
+/* line 296, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-detailed dt {
   display: inline-block;
   vertical-align: top;
   width: 30%;
 }
-/* line 278, H:/job/projects-active/tennis/scss/list.scss */
+/* line 302, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-detailed dd {
   display: inline-block;
   vertical-align: top;
@@ -365,73 +387,73 @@ html, body {
   overflow: hidden;
 }
 
-/* line 287, H:/job/projects-active/tennis/scss/list.scss */
+/* line 311, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-reviews.is-large {
   margin: 0 -20px -20px -20px;
 }
 
-/* line 292, H:/job/projects-active/tennis/scss/list.scss */
+/* line 316, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-reviews-header {
   overflow: hidden;
   *zoom: 1;
   background: #eee;
   padding: 15px 20px;
 }
-/* line 298, H:/job/projects-active/tennis/scss/list.scss */
+/* line 322, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-reviews-header .m-item-reviews-header--count {
   float: left;
 }
-/* line 302, H:/job/projects-active/tennis/scss/list.scss */
+/* line 326, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-reviews-header .m-item-reviews-header--sort {
   float: right;
 }
-/* line 305, H:/job/projects-active/tennis/scss/list.scss */
+/* line 329, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-reviews-header .m-item-reviews-header--sort ul {
   display: inline-block;
   padding-left: 10px;
 }
-/* line 310, H:/job/projects-active/tennis/scss/list.scss */
+/* line 334, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-reviews-header .m-item-reviews-header--sort li {
   display: inline-block;
 }
-/* line 314, H:/job/projects-active/tennis/scss/list.scss */
+/* line 338, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-reviews-header .m-item-reviews-header--sort li:last-child:before {
   content: "/ ";
 }
 
-/* line 322, H:/job/projects-active/tennis/scss/list.scss */
+/* line 346, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-reviews-list {
   background: #f6f6f6;
 }
 
-/* line 326, H:/job/projects-active/tennis/scss/list.scss */
+/* line 350, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-review {
   border-top: 1px solid #d9d9d9;
   margin: 0 20px;
   padding: 20px 0 0;
 }
-/* line 331, H:/job/projects-active/tennis/scss/list.scss */
+/* line 355, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-review:first-child {
   border-top: none;
 }
-/* line 335, H:/job/projects-active/tennis/scss/list.scss */
+/* line 359, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-review .m-item-review--text {
   font-size: 15px;
   line-height: 20px;
 }
 
-/* line 341, H:/job/projects-active/tennis/scss/list.scss */
+/* line 365, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-review-info {
   line-height: 28px;
   padding: 16px 0 20px;
 }
-/* line 345, H:/job/projects-active/tennis/scss/list.scss */
+/* line 369, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-review-info .m-item-review-info--avatar, .m-item-review-info .m-item-review-info--user, .m-item-review-info .m-item-review-info--date {
   line-height: 30px;
   vertical-align: middle;
   display: inline-block;
 }
-/* line 351, H:/job/projects-active/tennis/scss/list.scss */
+/* line 375, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-review-info .m-item-review-info--avatar {
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
@@ -443,16 +465,16 @@ html, body {
   overflow: hidden;
   background-clip: padding-box;
 }
-/* line 360, H:/job/projects-active/tennis/scss/list.scss */
+/* line 384, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-review-info .m-item-review-info--avatar img {
   width: 30px;
   height: 30px;
 }
-/* line 366, H:/job/projects-active/tennis/scss/list.scss */
+/* line 390, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-review-info .m-item-review-info--user {
   margin: 0 10px;
 }
-/* line 372, H:/job/projects-active/tennis/scss/list.scss */
+/* line 396, H:/job/projects-active/tennis/scss/list.scss */
 .m-item-review-info .m-item-review-info--date {
   margin: 0 10px;
 }
