--- a/scss/mixins/_vars.scss
+++ b/scss/mixins/_vars.scss
@@ -2,6 +2,7 @@ $header-height: 67px;
 $color-grey: #2c3e50;
 $color-grey-light: #808080;
 $color-yellow: #f1c40f;
+$color-yellow-light: #FFEBA0;
 $color-grey-border: #D9D9D9;
 $color-green: #3c3;
 $color-red: red;
