--- a/partials/partial-list-list.html
+++ b/partials/partial-list-list.html
@@ -1,23 +1,6 @@
 <div class="m-list">
     <div class="m-list-filter">
-        <button class="m-list-filter--item is-selection">
-            <span>Цена</span>
-        </button>
-        <button class="m-list-filter--item is-selection">
-            <span>Рейтинг</span>
-        </button>
-        <button class="m-list-filter--item">
-            <span>Парковка</span>
-        </button>
-        <button class="m-list-filter--item">
-            <span>Кредитные карты</span>
-        </button>
-        <button class="m-list-filter--item is-selection">
-            <span>Режим работы</span>
-        </button>
-        <button class="m-list-filter--item is-selection">
-            <span>Районы</span>
-        </button>
+        <p-filter-buttons/>
     </div>
 
     {{listNow}}
